--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,8 @@
       "persistent": false
     },
 	"icons": {"48": "icon48.png"},
+	"browser_action": {
+		"default_icon": "icon48.png"
+	},
     "manifest_version": 2
   }
