--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,44 @@
 {
-    "name": "Oof!",
-    "version": "1.1.3",
-    "description": "Plays the Roblox oof sound on tab close!",
-    "permissions": [],
-    "background": {
-      "scripts": ["main.js"],
-      "persistent": false
+  "name": "Oof!",
+  "version": "2.0.0",
+  "description": "Plays the Roblox oof sound on tab close!",
+  "manifest_version": 3,
+
+  "permissions": [
+    "storage",
+    "tabs",
+    "offscreen"
+  ],
+
+  "host_permissions": [
+    "<all_urls>"
+  ],
+
+  "background": {
+    "service_worker": "background.js"
+  },
+
+  "icons": {
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
+  "action": {
+    "default_icon": {
+      "48": "icon48.png",
+      "128": "icon128.png"
     },
-	"icons": {"48": "icon48.png"},
-	"browser_action": { 
-        "default_icon": {"48": "icon48.png",
-						"128": "icon128.png"},
-		"default_popup": "popup.html" 		
-    },
-    "manifest_version": 2
+    "default_popup": "popup.html"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "oof.mp3",
+        "offscreen.html",
+        "offscreen.js"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ]
 }
